Added some frontend/backend register/login functionallity

--- a/Docker/php/default-ssl.conf
+++ b/Docker/php/default-ssl.conf
@@ -1,7 +1,8 @@
 <IfModule mod_ssl.c>
+    Alias /api "/var/www/html/server/api.php"
     <VirtualHost _default_:443>
         ServerAdmin webmaster@localhost
-        DocumentRoot /var/www/html
+        DocumentRoot /var/www/html/static
 
         ErrorLog ${APACHE_LOG_DIR}/error.log
         CustomLog ${APACHE_LOG_DIR}/access.log combined
