--- a/Docker/docker-compose.yaml
+++ b/Docker/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
       - '443:443'
     volumes:
       - ../src:/var/www/html
+    env_file:
+      - secrets.env
     depends_on:
       mysql:
         condition: service_healthy
